--- a/css/styles.css
+++ b/css/styles.css
@@ -608,9 +608,9 @@ h2 {
         background-color: #FFD60A;
     }
 
-    .image1,
-    .image2,
-    .image3 {
+    .firstImage,
+    .secondImage,
+    .thirdImage {
         display: flex;
         justify-content: baseline;
         justify-content: space-around;
@@ -660,17 +660,17 @@ h2 {
         color: #ed254e;
     }
 
-    .image1,
-    .image2,
-    .image3 {
+    .firstImage,
+    .secondImage,
+    .thirdImage {
         flex-direction: row;
         width: 100%;
         justify-content: space-between;
     }
 
-    .image1 img,
-    .image2 img,
-    .image3 img {
+    .firstImage img,
+    .secondImage img,
+    .thirdImage img {
         padding-bottom: 100px;
         width: 50%;
         height: auto;
